--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,13 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "api/server.js",
-        "use": "@vercel/node"
-      }
+      { "src": "server.js", "use": "@vercel/node" },
+      { "src": "public/**/*", "use": "@vercel/static" }
     ],
     "routes": [
-      {
-        "src": "/api/(.*)", "dest": "server.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "public/$1"
-      }
+        { "src": "/", "dest": "server.js" }, 
+        { "src": "/api/(.*)", "dest": "/api/index.js" },  
+        { "src": "/", "dest": "/public/index.html" },
+        { "src": "/", "dest": "/public/register.html" }   
     ]
 }
